--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,19 +1,19 @@
 .navlink{
     font-size:20; 
-    font: 'georgia'; 
+    font-family:  Tahoma; 
     font-weight: bold; 
     color: white; 
 }
 
 navprofile{
     font-size:20; 
-    font: 'georgia'; 
+    font: Tahoma; 
     font-weight: bold; 
     color: white; 
 }
 
 .navdropdown{
     font-size:25; 
-    font: 'georgia'; 
+    font: Tahoma; 
     color: black; 
 }
