funct to getAllScheduledTrans

--- a/backend-django/dbstechtrek/dbstechtrek_webapp/templates/dbstechtrek_webapp/index.html
+++ b/backend-django/dbstechtrek/dbstechtrek_webapp/templates/dbstechtrek_webapp/index.html
@@ -1,7 +1,7 @@
 {% if user_list %}
     <ul>
     {% for user in user_list %}
-        <li>{{user.firstname}}</li>
+        <li>{{user}}</li>
     {% endfor %}
     </ul>
 {% else %}
